Bug#19536   "NDB replication fails when no explicit--binlog-format given"   fix initialization, storage engine initialization must occur after   logging type is configured

sql/mysqld.cc:
  Bug#19536
    fix initialization, storage engine initialization must occur after
    logging type is configured